[workspace]
members=["portal-solutions-rewd-core"]
resolver="3"

[workspace.dependencies]
swc_atoms = "^7.0.0"
swc_common = "^14.0.0"
swc_ecma_ast = "^14.0.0"
swc_ecma_compat_es2015 = "^24.0.0"
swc_ecma_minifier = "^28.0.0"
swc_ecma_transforms_base = "^23.0.0"
swc_ecma_transforms_optimization = "^24.0.0"
swc_ecma_utils = "^19.0.0"
swc_ecma_visit = "^14.0.0"
swc_bundler = "^27.0.0"
swc_ecma_loader = "^14.0.0"
swc_ecma_parser = "^22.0.0"
swc_ecma_codegen = "^16"

portal-solutions-swibb="^0.3.2"
