[workspace]
members=["crates/portal-solutions-rewd-core"]
resolver="3"

[workspace.package]
license = "MPL-2.0"
description = "JS rewriter"

[workspace.dependencies]

swc_atoms = "^9.0.0"
swc_common = "^19.0.0"
swc_ecma_ast = "^21.0.0"
swc_ecma_compat_es2015 = "^43.0.0"
swc_ecma_minifier = "^46.0.0"
swc_ecma_transforms_base = "^38.0.0"
swc_ecma_transforms_optimization = "^40.0.0"
swc_ecma_utils = "^27.0.0"
swc_ecma_visit = "^21.0.0"
swc_bundler = "^44.0.0"
swc_ecma_loader = "^19.0.0"
swc_ecma_parser = "^35.0.0"
swc_ecma_codegen = "^24"


portal-solutions-swibb = {version="^0.6.0-alpha.1",git="https://github.com/portal-co/swibb.git"}